2009-10-09  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el: Slightly factor code, add menu entries.

2009-09-29  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-sync-package-and-default-directory):
	Better checking for packages.

2009-09-28  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-sync-package-and-default-directory):
	Do not try to set package if it doesn't exists.

2009-09-25  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl-exts.lisp: Add EVAL-WHEN to prevent subtle dependency
	problem.

2009-09-21  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el, swank-sprof.lisp: New contrib for
	integration with SBCL's sb-sprof profiler,
	adopted from Juho Snellman's code.

2009-09-17  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-clear-buffer): Don't change cursor
	position if is already at the prompt.

2009-09-16  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-references.el: Largely refactored: decoupled code from
	SLDB; add references to the compilation log.

2009-09-15  Stas Boukarev  <stassats@gmail.com>

	* slime-autodoc.el (slime-fontify-string): setup *slime-fontify*
	buffer without calling (lisp-mode) to avoid turning slime-mode there,
	which may cause interference.

2009-09-13  Stas Boukarev  <stassats@gmail.com>

	* slime-autodoc.el (slime-fontify-string): do not call
	(slime-autodoc-mode -1), there is no reason to do so.
	And it won't mess slime-echo-arglist-function, which fixes
	bug reported by Stanislaw Halik.

2009-09-04  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-sync-package-and-default-directory):
	Don't change package if it's unknown. Use existing functions for
	changing package and directory.

2009-09-02  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (decode-required-arg): Move LispWorks specific
	code into swank-lispworks.lisp.

2009-09-01  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (decode-required-arg): Arglists for some forms