@@ -7,7 +7,7 @@
 
 (in-package :swank)
 
-#-sbcl
+#+sbcl
 (eval-when (:compile-toplevel :load-toplevel :execute)
   (require :sb-sprof))
 
@@ -38,12 +38,22 @@
           (samples-percent (sb-sprof::node-count node))
           (samples-percent (sb-sprof::node-accrued-count node))))
 
-(defun serialize-call-graph ()
-  (let ((nodes (sort (copy-list
-                      (sb-sprof::call-graph-flat-nodes *call-graph*))
-                     #'>
-;;                     :key #'sb-sprof::node-count)))
-                     :key #'sb-sprof::node-accrued-count)))
+(defun filter-swank-nodes (nodes)
+  (let ((swank-package (find-package :swank)))
+    (remove-if (lambda (node)
+                 (let ((name (sb-sprof::node-name node)))
+                   (and (symbolp name)
+                        (eql (symbol-package name)
+                             swank-package))))
+               nodes)))
+
+(defun serialize-call-graph (&key exclude-swank)
+  (let ((nodes (sb-sprof::call-graph-flat-nodes *call-graph*)))
+    (when exclude-swank
+      (setf nodes (filter-swank-nodes nodes)))
+    (setf nodes (sort (copy-list nodes) #'>
+                      ;; :key #'sb-sprof::node-count)))
+                      :key #'sb-sprof::node-accrued-count))
     (setf *number-nodes* (make-hash-table))
     (setf *node-numbers* (make-hash-table))
     (loop for node in nodes
@@ -60,10 +70,9 @@
                       (return (append list
                                       `((nil "Elsewhere" ,rest nil nil)))))))))
 
-(defslimefun swank-sprof-get-call-graph ()
+(defslimefun swank-sprof-get-call-graph (&key exclude-swank)
   (setf *call-graph* (sb-sprof:report :type nil))
-  (serialize-call-graph))
-
+  (serialize-call-graph :exclude-swank exclude-swank))
 
 (defslimefun swank-sprof-expand-node (index)
   (let* ((node (gethash index *number-nodes*)))
